--- a/chat-server/.env
+++ b/chat-server/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGODB_URI = "mongodb+srv://karanpresha:KCx1TRVtvvhWjGxm@cluster0.xty4s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-JWT_SECRET = preshakaran
+MONGODB_URI = "your_mongodb_url"
+JWT_SECRET = your_jwt_secret
